// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoringLabel test ScoringLabel score Should match snapshot with bad score 1`] = `
<body>
  <div>
    <div
      class="scoring_label_container"
    >
      <div
        class="label negative"
      >
        <span
          class="title"
        >
          ОБЩИЙ СКОРИНГ
        </span>
        <span
          class="score"
        >
          1,0
        </span>
      </div>
      <div
        class="desc_icon_container"
      >
        <div
          class="desc_icon"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ScoringLabel test ScoringLabel score Should match snapshot with good score 1`] = `
<body>
  <div>
    <div
      class="scoring_label_container"
    >
      <div
        class="label positive"
      >
        <span
          class="title"
        >
          ОБЩИЙ СКОРИНГ
        </span>
        <span
          class="score"
        >
          4,5
        </span>
      </div>
      <div
        class="desc_icon_container"
      >
        <div
          class="desc_icon"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ScoringLabel test ScoringLabel score Should match snapshot with normal score 1`] = `
<body>
  <div>
    <div
      class="scoring_label_container"
    >
      <div
        class="label warning"
      >
        <span
          class="title"
        >
          ОБЩИЙ СКОРИНГ
        </span>
        <span
          class="score"
        >
          3,5
        </span>
      </div>
      <div
        class="desc_icon_container"
      >
        <div
          class="desc_icon"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ScoringLabel test ScoringLabel score Should match snapshot with three-digits score 1`] = `
<body>
  <div>
    <div
      class="scoring_label_container"
    >
      <div
        class="label positive"
      >
        <span
          class="title"
        >
          ОБЩИЙ СКОРИНГ
        </span>
        <span
          class="score"
        >
          4,1
        </span>
      </div>
      <div
        class="desc_icon_container"
      >
        <div
          class="desc_icon"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ScoringLabel test ScoringLabel score Should match snapshot with zero score 1`] = `
<body>
  <div>
    <div
      class="scoring_label_container"
    >
      <div
        class="label negative"
      >
        <span
          class="title"
        >
          ОБЩИЙ СКОРИНГ
        </span>
        <span
          class="score"
        >
          0,0
        </span>
      </div>
      <div
        class="desc_icon_container"
      >
        <div
          class="desc_icon"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ScoringLabel test ScoringLabel title Should match snapshot with custom title 1`] = `
<body>
  <div>
    <div
      class="scoring_label_container"
    >
      <div
        class="label warning"
      >
        <span
          class="title"
        >
          CUSTOM TITLE
        </span>
        <span
          class="score"
        >
          3,0
        </span>
      </div>
      <div
        class="desc_icon_container"
      >
        <div
          class="desc_icon"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ScoringLabel test ScoringLabel title Should match snapshot with default title 1`] = `
<body>
  <div>
    <div
      class="scoring_label_container"
    >
      <div
        class="label warning"
      >
        <span
          class="title"
        >
          ОБЩИЙ СКОРИНГ
        </span>
        <span
          class="score"
        >
          3,0
        </span>
      </div>
      <div
        class="desc_icon_container"
      >
        <div
          class="desc_icon"
        />
      </div>
    </div>
  </div>
</body>
`;
